# GShockTimeServer

./: .coveragerc  .gitignore  .gitmodules  =2.0.6  AUTHORS.rst  CONTRIBUTING.rst  README-1.md  README-ORIG.md  README.md  README.rst  build-and-install.sh  build.sh  build_package.sh  config.ini  enable-spi.sh  environment.yml  gshock_server_data.json  make-dist.sh  make-sd-image.sh  make_dist.sh  make_distr.sh  protocol.md  pyproject.toml  requirements.txt  setup-display.sh  setup.cfg  setup.py  setup.sh  setvenv.sh  sync-to-pi.sh  venv.sh
.github/workflows/: python-package-conda.yml
dist_dir/: README.md  args.py  gshock_server.py  requirements.txt
docs/: conf.py  index.rst
gatttool_scripts/: encodeTime  readme.md  setTime.exp
gshock-server/: gshock_server.py
gshock-server-dist/: README.md  setup.sh
gshock-server-dist/display/: oled_simulator.py
gshock-server/display/: 1inch3_LCD_test.py  display.py  display_test.py  ftp154_display.py  mock_display.py  oled_simulator.py  waveshare_display.py
src/: api_tests.py  args.py  gshock_server.py
src/display/: oled_simulator.py  run_display.py
src/examples/: api_tests.py  args.py
src/gshock-server/: =2.0.38  args.py  check_bt.py  configurator.py  gshock_server.py  gshock_server_data.json  gshock_server_display.py  peristent_store.py  utils.py
src/gshock-server/display/: dimmer_service.py  display.py  display_manager.py  ftp154_display.py  mock_display.py  tft154_display.py  waveshare_display.py
src/gshock_api/: __init__.py  api_tests.py  casio_constants.py  config.ini  configurator.py  connection.py  core.py  data_watcher.py  gshock_server.py  logger.py  scanner.py  watch_info.py
src/gshock_api/iolib/: alarms_io.py  app_info_io.py  button_pressed_io.py  dst_for_world_cities_io.py  dst_watch_state_io.py  settings_io.py  time_adjustement_io.py  time_io.py  watch_condition_io.py  (+1 more)
src/gshocktimeserver/: __init__.py  alarms.py  api_tests.py  args.py  cancelable_result.py  casio_constants.py  casio_watch.py  config.ini  configurator.py  connection.py  data_watcher.py  device_queue.py  event.py  gshock_api.py  gshock_server.py  logger.py  mailsener.py  message_dispatcher.py  result_queue.py  scanner.py  settings.py  skeleton.py  tz_helper.py  utils.py  watch_info.py
src/scripts/: enable-spi.sh  gshock-updater.sh  setup-all.sh  setup-boot.sh  setup-display.sh  setup.sh
tests/: conftest.py  test_code.py  test_skeleton.py
(+16 files in other folders)
