[project]
name = "gshock-server"
version = "1.0.0"
description = "Headless G-Shock Bluetooth Time Sync Server for Raspberry Pi"
authors = [{ name = "Ivo Zivkov" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "bleak>=0.22.0",
    "asyncio",
    "pillow",
    # "numpy==1.26.4",
    "requests",
    "configparser",
    "pyserial",
    "typing-extensions",
]

[project.scripts]
gshock-server = "gshock_server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Enable automatic virtual environment management
managed = true
python-preference = "system"
cache-dir = "~/.cache/uv"
extra-index-url = ["https://pypi.org/simple", "https://www.piwheels.org/simple"]

[tool.uv.pip]
# Optional: enable pip compatibility mode for some edge packages
require-hashes = false
upgrade = true
